// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bracket.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export {fitsIn, oneLine};

=====================================output=====================================
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export { fitsIn, oneLine };

================================================================================
`;

exports[`bracket.js 2`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export {fitsIn, oneLine};

=====================================output=====================================
export {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
};
export {fitsIn, oneLine};

================================================================================
`;

exports[`empty.js 1`] = `
====================================options=====================================
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {};
export {} from ".";

=====================================output=====================================
export {};
export {} from ".";

================================================================================
`;

exports[`empty.js 2`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export {};
export {} from ".";

=====================================output=====================================
export {};
export {} from ".";

================================================================================
`;
